--- a/Stwo_wrapper/verifier_script.ipynb
+++ b/Stwo_wrapper/verifier_script.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "id": "67a09953",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 9,
    "id": "d9371b02",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,11 @@
     "assert(nodes[\"level_8_node_0\"] == F(proof[\"commitments\"][1]))\n",
     "\n",
     "\n",
-    "# Check querries answer\n"
+    "# Check querries answer we have 104 samples each equal to x = oods_point and f(x) = sampled_value_i\n",
+    "# For each column:\n",
+    "for i in range(2):\n",
+    "    evaluations = []\n",
+    "    queried_values_per_column = proof[\"queried_values_\"+str(i)]"
    ]
   },
   {
@@ -502,11 +506,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e486cb3a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['316772341',\n",
+       "  '1526280133',\n",
+       "  '663010112',\n",
+       "  '224983897',\n",
+       "  '510598760',\n",
+       "  '1109503351'],\n",
+       " ['754832207',\n",
+       "  '435790299',\n",
+       "  '883623752',\n",
+       "  '553207508',\n",
+       "  '154784232',\n",
+       "  '199176676'],\n",
+       " ['689603315',\n",
+       "  '1763523007',\n",
+       "  '1720552945',\n",
+       "  '1983603154',\n",
+       "  '367841669',\n",
+       "  '319325418'],\n",
+       " ['1290247052',\n",
+       "  '1120744584',\n",
+       "  '193500372',\n",
+       "  '294491115',\n",
+       "  '951360807',\n",
+       "  '891034447']]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queried_values_per_column"
+   ]
   },
   {
    "cell_type": "code",
